Cambios de Prueba

--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
-    <title>FEASVERSE</title>
+    <meta charset="UTF-8" />
+    <title>FeasVerse</title>
 </head>
 
 <body>
-
-    <h1>HELLO WORLD</h1>
-
+    <div>
+        <h1>HELLO WORLD</h1>
+        <p>
+            <img src="" alt="" />
+        </p>
+    </div>
 </body>
 
 </html>
