Documentación de ejemplo

--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 
+<!-- ESTILOS DE DOCUMENTACIÓN DEL CODIGO
+*Comentario claro
+!Alerta
+?Pregunta
+TODO importante
+//Comentario tachado
+-->
+
 <head>
     <meta charset="UTF-8" />
     <title>FeasVerse</title>
