Cambios de estructura basica del sitio publico

--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
-
 <!-- ESTILOS DE DOCUMENTACIÓN DEL CODIGO
 *Comentario claro
 !Alerta
@@ -9,18 +6,21 @@ TODO importante
 //Comentario tachado
 -->
 
+<!DOCTYPE html>
+<!-- Declaración del idioma para el documento -->
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8" />
+    <!-- *Título del documento -->
     <title>FeasVerse</title>
+    <!-- Metadatos de la página web -->
+    <meta charset="utf-8">
+    <meta name="author" content="Daniel Carranza">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- IMPORTACIÓN DE RECURSOS EXTERNOS -->
+    <!-- Llamada al icono de la página web -->
+    <link type="image/png" rel="icon" href="../../resources/img/icon.png">
+    <!-- Llamada a las hojas de estilos del framework e iconos -->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="../../resources/css/bootstrap-icons.min.css">
 </head>
-
-<body>
-    <div>
-        <h1>HELLO WORLD</h1>
-        <p>
-            <img src="" alt="" />
-        </p>
-    </div>
-</body>
-
-</html>
