--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -1,9 +1,9 @@
 <!-- ESTILOS DE DOCUMENTACIÓN DEL CODIGO
-*Comentario claro
-!Alerta
-?Pregunta
-TODO importante
-//Comentario tachado
+* Comentario claro
+! Alerta
+? Pregunta
+TODO importante // realtando algo
+// Comentario tachado
 -->
 
 <!DOCTYPE html>
@@ -11,18 +11,21 @@ TODO importante
 <html lang="es">
 
 <head>
-    <!-- *Título del documento -->
+    <!-- TODO Título del documento -->
     <title>FeasVerse</title>
     <!-- Metadatos de la página web -->
     <meta charset="utf-8">
     <meta name="author" content="FeasVerseCompany">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- *IMPORTACIÓN DE RECURSOS EXTERNOS -->
-    <!-- Llamada al icono de la página web -->
+    <!-- TODO Llamada al icono de la página web -->
     <link type="image/png" rel="icon" href="../../recursos/imagenes/icono.png">
     <!-- Llamada a las hojas de estilos del framework e iconos -->
-    <link type="text/css" rel="stylesheet" href="../../resources/css/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="../../resources/css/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
+<body>
+    <!-- Contenido principal del documento -->
+
+</body>
 
