--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -12,7 +12,7 @@ TODO importante // realtando algo
 
 <head>
     <!-- TODO Título del documento -->
-    <title>FeasVerse</title>
+    <title></title>
     <!-- Metadatos de la página web -->
     <meta charset="utf-8">
     <meta name="author" content="FeasVerseCompany">
@@ -20,12 +20,18 @@ TODO importante // realtando algo
     <!-- *IMPORTACIÓN DE RECURSOS EXTERNOS -->
     <!-- TODO Llamada al icono de la página web -->
     <link type="image/png" rel="icon" href="../../recursos/imagenes/icono.png">
-    <!-- Llamada a las hojas de estilos del framework e iconos -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- *Llamada a las hojas de estilos del framework e iconos -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-    <!-- Contenido principal del documento -->
-
+    <!-- *Contenido principal del documento -->
+    <main>
+    </main>
+    <!-- *Llamada al controlador de la página web -->
+    <script type="text/javascript" src="../../controlador/publico/index.js"></script>
+    <!-- *Llamada al controlador del sitio público -->
+    <script type="text/javascript" src="../../controlador/utilidades(plantillas)/publico.js"></script>
 </body>
-
+</html>
