--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -19,8 +19,9 @@ TODO importante // realtando algo
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- *IMPORTACIÓN DE RECURSOS EXTERNOS -->
     <!-- TODO Llamada al icono de la página web -->
-    <link type="image/png" rel="icon" href="../../recursos/imagenes/icono.png">
+    <link type="image/png" rel="icon" href="../../recursos/imagenes/icono.svg">
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
+    <link rel="stylesheet" href="../../recursos/estilos/publico/header.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -29,9 +30,9 @@ TODO importante // realtando algo
     <!-- *Contenido principal del documento -->
     <main>
     </main>
-    <!-- *Llamada al controlador de la página web -->
-    <script type="text/javascript" src="../../controlador/publico/index.js"></script>
     <!-- *Llamada al controlador del sitio público -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/publico.js"></script>
+    <!-- *Llamada al controlador de la página web -->
+    <script type="text/javascript" src="../../controlador/publico/index.js"></script>
 </body>
 </html>
