--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -43,13 +43,7 @@ TODO importante // realtando algo
                     </button>
                     <div class="collapse navbar-collapse cursor-hover" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active pointer-hover" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link pointer-hover" href="#">Link</a>
-                            </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item dropdown"> <!--*Elemento desplegable-->
                                 <a class="nav-link dropdown-toggle pointer-hover" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
                                     Dropdown
@@ -63,11 +57,31 @@ TODO importante // realtando algo
                                     <li><a class="dropdown-item pointer-hover" href="#">Something else here</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item cursor-hover">
-                                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                            <li class="nav-item dropdown"> <!--*Elemento desplegable-->
+                                <a class="nav-link dropdown-toggle pointer-hover" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Dropdown
+                                </a>
+                                <ul class="dropdown-menu cursor-hover">
+                                    <li><a class="dropdown-item pointer-hover" href="#">Action</a></li>
+                                    <li><a class="dropdown-item pointer-hover" href="#">Another action</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item pointer-hover" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link pointer-hover" href="#">Link</a>
+                            </li>
+                            
+                        </ul>
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <button type="button" class="btn btn-light">Light</button>
                             </li>
                         </ul>
-                    </div>
+                    </div>                 
                 </div>
             </nav>
         </header>
