--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -32,7 +32,7 @@ TODO importante // realtando algo
     <!-- *Contenido principal del documento -->
     <main>
         <header>
-            <nav class="navbar navbar-expand-lg bg-primary cursor-hover fixed-top" data-bs-theme="dark" style="padding: 20px; padding-left: 65px; padding-right: 65px;">
+            <nav id="header"  class="navbar navbar-expand-lg bg-primary cursor-hover fixed-top" data-bs-theme="dark" style="padding: 20px; padding-left: 65px; padding-right: 65px;">
                 <div class="container-fluid cursor-hover">
                     <a class="navbar-brand" href="#">
                         <img src="../../recursos/imagenes/logo.svg" alt="FeasVerseCompany" width="70" height="70">
