--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -22,68 +22,79 @@ TODO importante // realtando algo
     <link type="image/png" rel="icon" href="../../recursos/imagenes/icono.svg">
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet"> 
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="../../recursos/estilos/publico/index.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- *Contenido principal del documento -->
     <main>
         <header>
-            <nav id="header"  class="navbar navbar-expand-lg bg-primary cursor-hover fixed-top" data-bs-theme="dark" style="padding: 20px; padding-left: 65px; padding-right: 65px;">
-                <div class="container-fluid cursor-hover">
-                    <a class="navbar-brand" href="#">
-                        <img src="../../recursos/imagenes/logo.svg" alt="FeasVerseCompany" width="70" height="70">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse cursor-hover" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item dropdown"> <!--*Elemento desplegable-->
-                                <a class="nav-link dropdown-toggle pointer-hover" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Dropdown
-                                </a>
-                                <ul class="dropdown-menu cursor-hover">
-                                    <li><a class="dropdown-item pointer-hover" href="#">Action</a></li>
-                                    <li><a class="dropdown-item pointer-hover" href="#">Another action</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
+            <div class="flexboxNav1">
+                <div> <!--Columna 1-->
+                    <nav id="bg-color-3blue" class="navbar navbar-expand-lg cursor-hover fixed-top" data-bs-theme="dark"
+                        style="padding: 20px; padding-left: 65px; padding-right: 65px;">
+                        <div class="container-fluid cursor-hover">
+                            <a class="navbar-brand" href="#">
+                                <img src="../../recursos/imagenes/logo.svg" alt="FeasVerseCompany" width="70" height="70">
+                            </a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse cursor-hover" id="navbarSupportedContent">
+                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                    <li class="nav-item dropdown"> <!--*Elemento desplegable-->
+                                        <a class="nav-link dropdown-toggle pointer-hover" href="#" role="button"
+                                            data-bs-toggle="dropdown" aria-expanded="false">
+                                            Ingresar
+                                        </a>
+                                        <ul class="dropdown-menu cursor-hover" id="bg-color-3blue">
+                                            <li><a class="dropdown-item pointer-hover" id="textLight"
+                                                    href="#">Registrarse</a>
+                                            </li>
+                                            <li><a class="dropdown-item pointer-hover" id="textLight" href="#">Iniciar
+                                                    Sesión</a></li>
+                                        </ul>
                                     </li>
-                                    <li><a class="dropdown-item pointer-hover" href="#">Something else here</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown"> <!--*Elemento desplegable-->
-                                <a class="nav-link dropdown-toggle pointer-hover" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Dropdown
-                                </a>
-                                <ul class="dropdown-menu cursor-hover">
-                                    <li><a class="dropdown-item pointer-hover" href="#">Action</a></li>
-                                    <li><a class="dropdown-item pointer-hover" href="#">Another action</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
+                                    <li class="nav-item dropdown"> <!--*Elemento desplegable -->
+                                        <a class="nav-link dropdown-toggle pointer-hover" href="#" role="button"
+                                            data-bs-toggle="dropdown" aria-expanded="false">
+                                            Dropdown
+                                        </a>
+                                        <ul class="dropdown-menu cursor-hover" id="bg-color-3blue">
+                                            <li><a class="dropdown-item pointer-hover" id="textLight" href="#">Action</a>
+                                            </li>
+                                            <li><a class="dropdown-item pointer-hover" id="textLight" href="#">Another
+                                                    action</a></li>
+                                        </ul>
                                     </li>
-                                    <li><a class="dropdown-item pointer-hover" href="#">Something else here</a></li>
+                                    <li class="nav-item">
+                                        <a class="nav-link pointer-hover" href="#">Sobre Nosotros</a>
+                                    </li>
                                 </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link pointer-hover" href="#">Link</a>
-                            </li>
-                            
-                        </ul>
-                        <ul class="navbar-nav mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <button type="button" class="btn btn-light">Light</button>
-                            </li>
-                        </ul>
-                    </div>                 
+                                
+                            </div>
+                        </div>
+                    </nav>
                 </div>
-            </nav>
+                <div> <!--Columna 2-->
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Active</a>
+                    </li>
+                </div>
+                <div> <!--Columna 3-->
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <button type="button" class="btn btn-light">Carrito</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </header>
     </main>
     <!-- *Llamada al controlador del sitio público -->
@@ -91,4 +102,5 @@ TODO importante // realtando algo
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/publico/index.js"></script>
 </body>
+
 </html>
