--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -27,6 +27,7 @@ TODO importante // realtando algo
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link href="../../recursos/estilos/publico/index.css" rel="stylesheet">
+    <link href="../../recursos/estilos/publico/fuentes.css" rel="stylesheet">
 </head>
 
 <body>
@@ -38,8 +39,8 @@ TODO importante // realtando algo
                     <nav id="bg-color-3blue" class="navbar navbar-expand-lg cursor-hover fixed-top" data-bs-theme="dark"
                         style="padding: 20px; padding-left: 65px; padding-right: 65px;">
                         <div class="container-fluid cursor-hover">
-                            <a class="navbar-brand" href="#">
-                                <img src="../../recursos/imagenes/logo.svg" alt="FeasVerseCompany" width="70" height="70">
+                            <a href="index.html" class="titillium-web-black text25">FEASVERSE
+                                <img src="../../recursos/imagenes/logo.svg" class="img1paddingb" alt="FeasVerseCompany" width="50" height="50">
                             </a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -49,7 +50,7 @@ TODO importante // realtando algo
                             <div class="collapse navbar-collapse cursor-hover" id="navbarSupportedContent">
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                     <li class="nav-item dropdown"> <!--*Elemento desplegable-->
-                                        <a class="nav-link dropdown-toggle pointer-hover" href="#" role="button"
+                                        <a class="nav-link dropdown-toggle pointer-hover titillium-web-black" href="#" role="button"
                                             data-bs-toggle="dropdown" aria-expanded="false">
                                             Ingresar
                                         </a>
@@ -61,23 +62,27 @@ TODO importante // realtando algo
                                                     Sesión</a></li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item dropdown"> <!--*Elemento desplegable -->
-                                        <a class="nav-link dropdown-toggle pointer-hover" href="#" role="button"
-                                            data-bs-toggle="dropdown" aria-expanded="false">
-                                            Dropdown
-                                        </a>
-                                        <ul class="dropdown-menu cursor-hover" id="bg-color-3blue">
-                                            <li><a class="dropdown-item pointer-hover" id="textLight" href="#">Action</a>
-                                            </li>
-                                            <li><a class="dropdown-item pointer-hover" id="textLight" href="#">Another
-                                                    action</a></li>
-                                        </ul>
-                                    </li>
                                     <li class="nav-item">
                                         <a class="nav-link pointer-hover" href="#">Sobre Nosotros</a>
                                     </li>
+                                    <li class="nav-item dropdown"> <!--*Elemento desplegable -->
+                                        <a class="nav-link dropdown-toggle pointer-hover" href="#" role="button"
+                                            data-bs-toggle="dropdown" aria-expanded="false">
+                                            Marcas
+                                        </a>
+                                        <div>
+                                            <ul class="dropdown-menu cursor-hover" id="bg-color-3blue">
+                                                <li><a class="dropdown-item pointer-hover" id="textLight" href="#">Action</a>
+                                                </li>
+                                                <li><a class="dropdown-item pointer-hover" id="textLight" href="#">Another
+                                                        action</a></li>
+                                            </ul>
+                                        </div>
+                                    </li>
                                 </ul>
-                                
+                                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                                    <button class="btn btn-light me-md-2" type="button">Carrito</button>
+                                </div>
                             </div>
                         </div>
                     </nav>
