--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -32,7 +32,7 @@ TODO importante // realtando algo
                         style="padding: 20px; padding-left: 65px; padding-right: 65px;">
                         <div class="container-fluid cursor-hover">
                             <a href="index.html" class="titillium-web-black text25">FEASVERSE
-                                <img src="../../recursos/imagenes/logo.svg" class="img1paddingb" alt="FeasVerseCompany" width="50" height="50">
+                                <img src="../../recursos/imagenes/logo.svg" class="img1" alt="FeasVerseCompany" width="50" height="50">
                             </a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -47,10 +47,10 @@ TODO importante // realtando algo
                                             Ingresar
                                         </a>
                                         <ul class="dropdown-menu cursor-hover bg-color-3blue">
-                                            <li><a class="dropdown-item pointer-hover text15" 
+                                            <li><a class="dropdown-item pointer-hover text15 titillium-web-regular" 
                                                     href="#">Registrarse</a>
                                             </li>
-                                            <li><a class="dropdown-item pointer-hover text15" id="textLight" href="#">Iniciar
+                                            <li><a class="dropdown-item pointer-hover text15 titillium-web-regular" id="textLight" href="#">Iniciar
                                                     Sesión</a></li>
                                         </ul>
                                     </li>
@@ -64,10 +64,128 @@ TODO importante // realtando algo
                                         </a>
                                         <div>
                                             <ul class="dropdown-menu cursor-hover bg-color-3blue">
-                                                <li><a class="dropdown-item pointer-hover" id="textLight" href="#">Action</a>
-                                                </li>
-                                                <li><a class="dropdown-item pointer-hover" id="textLight" href="#">Another
-                                                        action</a></li>
+                                                <div class="contenedorFlexboxMarcas"> <!--TODO Inicio de filas, contenedor de filas-->
+                                                    <div class="contenedorFlexboxElementos"> <!--!Fila 1-->
+                                                        <div> 
+                                                            <li> <!--*Elemento 1-->
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                        <div> <!--*Elemento 2-->
+                                                            <li>
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                        <div>  <!--*Elemento 3-->
+                                                            <li>
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                        <div> <!--*Elemento 4-->
+                                                            <li>
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                    </div>
+                                                    <div class="contenedorFlexboxElementos"> <!--!Fila 1-->
+                                                        <div> 
+                                                            <li> <!--*Elemento 1-->
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                        <div> <!--*Elemento 2-->
+                                                            <li>
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                        <div>  <!--*Elemento 3-->
+                                                            <li>
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                        <div> <!--*Elemento 4-->
+                                                            <li>
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                    </div>
+                                                    <div class="contenedorFlexboxElementos"> <!--!Fila 1-->
+                                                        <div> 
+                                                            <li> <!--*Elemento 1-->
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                        <div> <!--*Elemento 2-->
+                                                            <li>
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                        <div>  <!--*Elemento 3-->
+                                                            <li>
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                        <div> <!--*Elemento 4-->
+                                                            <li>
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                    </div>
+                                                    <div class="contenedorFlexboxElementos"> <!--!Fila 1-->
+                                                        <div> 
+                                                            <li> <!--*Elemento 1-->
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                        <div> <!--*Elemento 2-->
+                                                            <li>
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                        <div>  <!--*Elemento 3-->
+                                                            <li>
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                        <div> <!--*Elemento 4-->
+                                                            <li>
+                                                                <a class="dropdown-item pointer-hover" id="textLight" href="#">
+                                                                    <img class="imgMarca" src="../../recursos/imagenes/marcas/adidas.svg" alt="ADIDAS">
+                                                                </a>
+                                                            </li>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </ul>
                                         </div>
                                     </li>
