--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -27,73 +27,67 @@ TODO importante // realtando algo
     <main>
     </main>
     <nav class="fixed-bottom z-2">
-        <footer class="bg-primary text-white text-center text-lg-start">
+        <footer class=" text-white text-center text-lg-start py-5 bg-color-3blue">
             <!-- Grid container -->
             <div class="container p-4">
                 <!--Grid row-->
                 <div class="row">
                     <!--Grid column-->
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                        <h5 class="mb-0 titillium-web-bold">Contáctanos</h5>
+
+                        <ul class="list-unstyled mb-0 mt-4">
+                            <li>
+                                Link 1
+                            </li>
+                            <li>
+                                Link 2
+                            </li>
+                            <li>
+                                Link 3
+                            </li>
+                            <li>
+                                Link 4
+                            </li>
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                        <h5 class="mb-0 titillium-web-bold">Desarrolladores</h5>
+
+                        <ul class="list-unstyled mt-4">
+                            <li class="mb-3">
+                                Josué Emiliano Valdés Jacobo
+                            </li>
+                            <li class="mb-3">
+                                Fernando José Gomez Martinez
+                            </li>
+                            <li class="mb-3">
+                                Adriana Paola Mejía Méndez
+                            </li>
+                        </ul>
+                    </div>
+                    <!--Grid column-->
+                    <!--Grid column-->
                     <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-                        <h5 class="text-uppercase">Footer Content</h5>
-
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-                            molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
-                            voluptatem veniam, est atque cumque eum delectus sint!
+                        <h5 class="titillium-web-bold ">Donde Estamos Ubicados</h5>
+                        <p class="titillium-web-regular mt-4">
+                            Norte y, 83 Avenida Sur, San Salvador
                         </p>
-                    </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                        <h5 class="text-uppercase">Links</h5>
-
-                        <ul class="list-unstyled mb-0">
-                            <li>
-                                <a href="#!" class="text-white">Link 1</a>
-                            </li>
-                            <li>
-                                <a href="#!" class="text-white">Link 2</a>
-                            </li>
-                            <li>
-                                <a href="#!" class="text-white">Link 3</a>
-                            </li>
-                            <li>
-                                <a href="#!" class="text-white">Link 4</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                        <h5 class="text-uppercase mb-0">Links</h5>
-
-                        <ul class="list-unstyled">
-                            <li>
-                                <a href="#!" class="text-white">Link 1</a>
-                            </li>
-                            <li>
-                                <a href="#!" class="text-white">Link 2</a>
-                            </li>
-                            <li>
-                                <a href="#!" class="text-white">Link 3</a>
-                            </li>
-                            <li>
-                                <a href="#!" class="text-white">Link 4</a>
-                            </li>
-                        </ul>
                     </div>
                     <!--Grid column-->
                 </div>
                 <!--Grid row-->
             </div>
             <!-- Grid container -->
-
-            <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                © 2020 Copyright:
-                <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+            <div class="d-flex justify-content-center">
+                <!-- Copyright -->
+                <div class="text-center copyright titillium-web-bold" style="background-color: rgba(255, 0, 0, 0);">
+                    Copyright © 2024 FeasVerseCompany. All rights reserved
+                    <a class="text-white titillium-web-light" href="./index.html">FeasVerse.com</a>
+                </div>
             </div>
             <!-- Copyright -->
         </footer>
