--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -27,55 +27,59 @@ TODO importante // realtando algo
     <main>
     </main>
     <nav class="fixed-bottom z-2">
-        <footer class=" text-white text-center text-lg-start py-5 bg-color-3blue">
+        <footer class=" text-white text-center text-lg-start py-5 bg-color-3blue ">
             <!-- Grid container -->
             <div class="container p-4">
                 <!--Grid row-->
                 <div class="row">
                     <!--Grid column-->
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0 pb-3">
                         <h5 class="mb-0 titillium-web-bold">Contáctanos</h5>
-
                         <ul class="list-unstyled mb-0 mt-4">
-                            <li>
-                                Link 1
+                            <li class="mb-3">
+                                <img src="../../recursos/imagenes/icons/facebookIcon1.svg" alt="">
+                                <a class="text-white titillium-web-light" href=""> FEASVerse </a>    
                             </li>
-                            <li>
-                                Link 2
+                            <li class="mb-3">
+                                <img src="../../recursos/imagenes/icons/instgrmIcon1.svg" alt="">
+                                <a class="text-white titillium-web-light" href=""> FEAS.VERSE.SV </a>
                             </li>
-                            <li>
-                                Link 3
+                            <li class="mb-3">
+                                <img src="../../recursos/imagenes/icons/xIcon1.svg" alt="">
+                                <a class="text-white titillium-web-light" href=""> FEASVerse </a>
                             </li>
-                            <li>
-                                Link 4
+                            <li class="mb-3">
+                                <img src="../../recursos/imagenes/icons//gmlIcon1.svg" alt="">
+                                <a class="text-white titillium-web-light" href=""> feasverse.sv@gmail.com </a>
                             </li>
                         </ul>
                     </div>
                     <!--Grid column-->
 
                     <!--Grid column-->
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                        <h5 class="mb-0 titillium-web-bold">Desarrolladores</h5>
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0 pb-5">
+                        <h5 class="mb-0 titillium-web-bold ">Desarrolladores</h5>
 
                         <ul class="list-unstyled mt-4">
-                            <li class="mb-3">
+                            <li class="mb-3 titillium-web-regular">
                                 Josué Emiliano Valdés Jacobo
                             </li>
-                            <li class="mb-3">
+                            <li class="mb-3 titillium-web-regular">
                                 Fernando José Gomez Martinez
                             </li>
-                            <li class="mb-3">
+                            <li class="mb-3 titillium-web-regular">
                                 Adriana Paola Mejía Méndez
                             </li>
                         </ul>
                     </div>
                     <!--Grid column-->
                     <!--Grid column-->
-                    <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <div class="col-lg-6 col-md-12 mb-4 mb-md-0 pb-5">
                         <h5 class="titillium-web-bold ">Donde Estamos Ubicados</h5>
                         <p class="titillium-web-regular mt-4">
                             Norte y, 83 Avenida Sur, San Salvador
                         </p>
+                        <button type="button" class="btn border border-2 shadow bg-color-4blue col-5 mt-4 rounded-pill p-3 text15 titillium-web-semibold">Más Sobre Nosotros</button>
                     </div>
                     <!--Grid column-->
                 </div>
