--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -24,9 +24,37 @@ TODO importante // realtando algo
 
 <body>
     <!-- *Contenido principal del documento -->
-    <main>
-    </main>
+    <main> <!--*Carrusel principal-->
+        <div id="carouselExampleAutoplaying" class="carousel slide position-relative" data-bs-ride="carousel">
+            <div class="carousel-inner carrusel position-relative">
+                <div class="z-2 position-absolute">
+                    <div>
+                        <h1>
+                            ¡Bienvenido a FEASVERSE!
+                        </h1>
+                        <h2>
+                            Descubre el mundo del auténtico estilo en zapatillas
+                        </h2>
+                    </div>
+                </div>
+                <div class="carruselA">
+                    <div class="carousel-item active">
+                        <img src="../../recursos/imagenes/carrusel/sneakers1.svg" class="d-block w-100 opacity-50"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../../recursos/imagenes/carrusel/sneakers2.svg" class="d-block w-100 opacity-50"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../../recursos/imagenes/carrusel/sneakers3.svg" class="d-block w-100 opacity-50"
+                            alt="...">
+                    </div>
+                </div>
+            </div>
+        </div>
 
+    </main>
     <!-- *Llamada al controlador del sitio público -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/publico.js"></script>
     <!-- *Llamada al controlador de la página web -->
