--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -25,14 +25,18 @@ TODO importante // realtando algo
 <body>
     <!-- *Contenido principal del documento -->
     <main> <!--*Carrusel principal-->
-        <div id="carouselExampleAutoplaying" class="carousel slide position-relative" data-bs-ride="carousel">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner carrusel position-relative">
+                <div class="vertical-line position-absolute z-1"></div>
+                <div class="vertical-line position-absolute z-1"></div>
+                <div class="vertical-line position-absolute z-1"></div>
+
                 <div class="z-2 position-absolute">
                     <div>
-                        <h1>
+                        <h1 class="text-white titillium-web-bold text48">
                             ¡Bienvenido a FEASVERSE!
                         </h1>
-                        <h2>
+                        <h2 class="text-white titillium-web-light">
                             Descubre el mundo del auténtico estilo en zapatillas
                         </h2>
                     </div>
