--- a/vistas/publico/index.html
+++ b/vistas/publico/index.html
@@ -56,6 +56,126 @@ TODO importante // realtando algo
                 </div>
             </div>
         </div>
+        <!--*Carrusel de marcas-->
+        <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="cards-wrapper">
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg"  alt="...">
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg"  alt="...">
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="cards-wrapper">
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg"  alt="...">
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg"  alt="...">
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="cards-wrapper">
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="image-wrapper">
+                                <img src="../../recursos/imagenes/marcas/adidas.svg" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </main>
     <!-- *Llamada al controlador del sitio público -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/publico.js"></script>
